Adiciona estrutura html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagram_container">
+        <div class="instagram_celular">
+            <img src="./resources/img/instagram-celular.png" alt="img_celular">
+        </div>
+        <div class="instagram_login">
+            <div class="instagram_container_generico">
+                <img src="./resources/img/instagram-logo.png" class="instagram_logo" alt="img_logo_instagram">
+                <div class="imagem_perfil">
+                    <img src="./resources/img/perfil-instagram.jpeg" alt="img_perfil">
+                </div>
+                <a href="#" class="instagram_login">Continue como Gabriel Barbosa</a>
+                <a href="#"class="instagram_logout">Remover Conta</a>
+            </div>
+            <div class="instagram_container_generico">
+                <p class="conta_errada">Não é Gabriel Barbosa?</p>
+                <p class="trocar_conta_cadastrar_conta">
+                    <span class="link_azul">Trocar de Conta</span>
+                    ou
+                    <span class="link_azul">Inscrever-se</span>
+                </p>
+            </div>>
+            <div class="baixar_aplicativo">
+                <p class="baixar_mensagem">Baixe o Aplicativo</p>
+                <div class="baixar_opcoes">
+                    <a href="#" class="download_aplicativo"></a>
+                    <a href="#" class="download_aplicativo"></a>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </body>
 </html>
