Adiciona estilização usando Flexbox

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Instagram</title>
 </head>
 <body>
@@ -12,7 +11,7 @@
         <div class="instagram_celular">
             <img src="./resources/img/instagram-celular.png" alt="img_celular">
         </div>
-        <div class="instagram_login">
+        <div class="instagram_continuar_sessao">
             <div class="instagram_container_generico">
                 <img src="./resources/img/instagram-logo.png" class="instagram_logo" alt="img_logo_instagram">
                 <div class="imagem_perfil">
@@ -22,13 +21,13 @@
                 <a href="#"class="instagram_logout">Remover Conta</a>
             </div>
             <div class="instagram_container_generico">
-                <p class="conta_errada">Não é Gabriel Barbosa?</p>
+                <p class="trocar_conta_cadastrar_conta">Não é Gabriel Barbosa?</p>
                 <p class="trocar_conta_cadastrar_conta">
                     <span class="link_azul">Trocar de Conta</span>
                     ou
                     <span class="link_azul">Inscrever-se</span>
                 </p>
-            </div>>
+            </div>
             <div class="baixar_aplicativo">
                 <p class="baixar_mensagem">Baixe o Aplicativo</p>
                 <div class="baixar_opcoes">
@@ -36,8 +35,6 @@
                     <a href="#" class="download_aplicativo"></a>
                 </div>
             </div>
-
-
         </div>
     </div>
 </body>
