--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Instagram</title>
 </head>
 <body>
     <div class="instagram_container">
         <div class="instagram_celular">
-            <img src="./resources/img/instagram-celular.png" alt="img_celular">
+            <img src="./assets/img/instagram-celular.png" alt="img_celular">
         </div>
         <div class="instagram_continuar_sessao">
             <div class="instagram_container_generico">
-                <img src="./resources/img/instagram-logo.png" class="instagram_logo" alt="img_logo_instagram">
+                <img src="./assets/img/instagram-logo.png" class="instagram_logo" alt="img_logo_instagram">
                 <div class="imagem_perfil">
-                    <img src="./resources/img/perfil-instagram.jpeg" alt="img_perfil">
+                    <img src="./assets/img/perfil-instagram.jpeg" alt="img_perfil">
                 </div>
                 <a href="#" class="instagram_login">Continue como Gabriel Barbosa</a>
                 <a href="#"class="instagram_logout">Remover Conta</a>
